--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,10 @@
 body {
   color: 3322ee;
-  font-family: "Noto Serif JP", serif;
   background-size: 100%;
+  display: block;
+  font-family: "Noto Serif JP", serif;
+  margin: 0 auto;
+  max-width: 750px;
 }
 
 h1 {
@@ -37,14 +40,13 @@ hr {
 
 footer {
   font-size: 13px;
-  text-align: center;
+  text-align: left;
 }
 
 .card {
   background-color: #fcf8f3;
   display: block;
   margin: 20px auto 5px;
-  max-width: 750px;
 }
 
 .compass {
@@ -112,12 +114,12 @@ footer {
 }
 
 .footer {
-  color: #ffaaa5;
+  color: #fcf8f3;
   text-decoration: none;
 }
 
 .footer:hover {
-  color: #fcf8f3;
+  color: #ffaaa5;
 }
 
 #footer {
