--- a/src/styles.css
+++ b/src/styles.css
@@ -122,13 +122,13 @@ footer {
   padding: 0;
 }
 
-.future-weather {
+.weather-forecast {
   font-size: 20px;
   margin-bottom: 10px;
   text-align: center;
 }
 
-.night-temp {
+.weather-forecast-temperature-min {
   opacity: 0.7;
 }
 
