--- a/src/styles.css
+++ b/src/styles.css
@@ -30,14 +30,7 @@ h3:first-letter {
 hr {
   border: none;
   height: 3px;
-  background: -webkit-gradient(
-    linear,
-    0 0,
-    100% 0,
-    from(transparent),
-    to(transparent),
-    color-stop(50%, #ffaaa5)
-  );
+  background: linear-gradient(to right, transparent, #ffaaa5, transparent);
   margin-bottom: 40px;
 }
 
