--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,12 @@
+:root {
+  --branding-color: #ffaaa5;
+  --secondary-color: #fcf8f3;
+  --text-color: #2a363b;
+}
+
 body {
-  color: #212529;
   background-size: 100%;
+  color: var(--text-color);
   display: block;
   font-family: "Noto Serif JP", serif;
   margin: 0 auto;
@@ -8,7 +14,7 @@ body {
 }
 
 h1 {
-  color: #ffaaa5;
+  color: var(--branding-color);
   font-size: 50px;
   margin-bottom: 5px;
 }
@@ -28,28 +34,43 @@ h3:first-letter {
 }
 
 hr {
+  background: linear-gradient(
+    to right,
+    transparent,
+    var(--branding-color),
+    transparent
+  );
   border: none;
   height: 3px;
-  background: linear-gradient(to right, transparent, #ffaaa5, transparent);
   margin-bottom: 40px;
 }
 
 footer {
-  font-size: 13px;
+  color: var(--secondary-color);
+  font-size: 14px;
   text-align: left;
 }
 
+footer a {
+  color: var(--secondary-color);
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: var(--branding-color);
+}
+
 .card {
-  background-color: #fcf8f3;
+  background-color: var(--secondary-color);
   display: block;
   margin: 20px auto 5px;
 }
 
 .compass {
-  color: #ffaaa5;
+  color: var(--branding-color);
   font-size: 35px;
-  position: relative;
   left: 5px;
+  position: relative;
 }
 
 .compass:hover {
@@ -62,15 +83,15 @@ footer {
 }
 
 .search-button {
-  background-color: #ffaaa5;
-  color: #fcf8f3;
+  background-color: var(--branding-color);
+  color: var(--secondary-color);
   transition: all 150ms ease-in-out;
   width: 150px;
 }
 
 .search-button:hover {
-  background-color: #fcf8f3;
-  color: #ffaaa5;
+  background-color: var(--secondary-color);
+  color: var(--branding-color);
 }
 
 .current-weather {
@@ -85,7 +106,7 @@ footer {
 }
 
 .temp-data {
-  color: #ffaaa5;
+  color: var(--branding-color);
   font-size: 45px;
   margin-top: 20px;
   min-width: 150px;
@@ -119,17 +140,4 @@ footer {
 
 .weather-forecast-temperature-min {
   opacity: 0.5;
-}
-
-.footer {
-  color: #fcf8f3;
-  text-decoration: none;
-}
-
-.footer:hover {
-  color: #ffaaa5;
-}
-
-#footer {
-  opacity: 0.7;
 }
