--- a/src/styles.css
+++ b/src/styles.css
@@ -81,8 +81,8 @@ footer a:hover {
 }
 
 .search-box {
-  text-align: center;
   margin-bottom: 40px;
+  text-align: center;
 }
 
 .search-button {
@@ -122,7 +122,7 @@ footer a:hover {
   width: 80px;
 }
 
-.temp-scale-selector {
+.unit {
   font-size: 16px;
   position: relative;
   top: -21px;
@@ -196,7 +196,7 @@ footer a:hover {
     position: relative;
   }
 
-  .temp-scale-selector {
+  .unit {
     font-size: 14px;
     top: -19px;
   }
@@ -244,7 +244,7 @@ footer a:hover {
     font-size: 30px;
   }
 
-  .temp-scale-selector {
+  .unit {
     font-size: 10px;
     top: -14px;
   }
@@ -283,7 +283,7 @@ footer a:hover {
     font-size: 24px;
   }
 
-  .temp-scale-selector {
+  .unit {
     font-size: 8px;
     top: -11px;
   }
